footer spacing issue

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -1236,7 +1236,12 @@ h2::-moz-selection {
   justify-content: space-between;
   border-top: 2px solid #82AB40;
   margin: 0 5vw;
-  padding: 30px 0 20px 0;
+  padding: 30px 0;
+}
+@media (min-width: 768px) {
+  #footer-1 #footer-container-1 {
+    padding: 35px 0;
+  }
 }
 #footer-1 #footer-container-1 #left-footer-1 ul {
   color: #82AB40;
@@ -1244,7 +1249,6 @@ h2::-moz-selection {
   height: 100%;
   flex-direction: column;
   justify-content: flex-end;
-  margin-bottom: 7px;
 }
 #footer-1 #footer-container-1 #left-footer-1 ul li {
   font-size: 0.875rem;
@@ -1267,6 +1271,9 @@ h2::-moz-selection {
 #footer-1 #footer-container-1 #right-footer-1 ul li a:visited:hover,
 #footer-1 #footer-container-1 #right-footer-1 ul li a:visited:active {
   color: #F2B029;
+}
+#footer-1 #footer-container-1 #right-footer-1 ul :last-child {
+  margin-bottom: 0;
 }
 
 /* =============
