--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -12,7 +12,10 @@
         justify-content: space-between;
         border-top: 2px solid $grass;
         margin: 0 5vw;
-        padding: 30px 0 20px 0;
+        padding: 30px 0;
+        @include md{
+            padding: 35px 0;
+        }
         #left-footer-1{
             ul {
                 color: $grass;
@@ -20,7 +23,6 @@
                 height: 100%;
                 flex-direction: column;
                 justify-content: flex-end;
-                margin-bottom: 7px;
 
                 li{
                     font-size: rem-calc(14);
@@ -45,6 +47,9 @@
                             color: $yellow;
                         }
                     }
+                }
+                :last-child{
+                    margin-bottom: 0;
                 }
             }
         }
